--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_launcher_icons: ^0.7.2
   firebase_core: ^0.4.3+2 #For firebase database
-  firebase_database: ^3.1.1
-  firebase_auth: ^0.15.3+1 #firebase Authentication
+  firebase_database: ^3.1.3
+  firebase_auth: ^0.16.0 #firebase Authentication
   shared_preferences: ^0.5.6 #for local storage
   intl: ^0.16.0
   flutter_datetime_picker: ^1.2.6
@@ -22,7 +22,7 @@ dependencies:
   image_picker: ^0.6.2+3
   http: ^0.12.0+2
   charts_flutter: ^0.8.1
-  flutter_svg: ^0.15.0
+  flutter_svg: ^0.17.4
 
 
 dev_dependencies:
