--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,8 @@ dependencies:
   firebase_core: ^0.4.3+2 #For firebase database
   firebase_database: ^3.1.3
   firebase_auth: ^0.16.0 #firebase Authentication
-  shared_preferences: ^0.5.6 #for local storage
+  shared_preferences: ^0.5.7 #for local storage
+  shared_preferences_web: ^0.1.2+4
   intl: ^0.16.0
   flutter_datetime_picker: ^1.2.6
   fluttertoast: ^3.1.3
@@ -23,6 +24,7 @@ dependencies:
   http: ^0.12.0+2
   charts_flutter: ^0.8.1
   flutter_svg: ^0.17.4
+  cloud_firestore: ^0.13.5
 
 
 dev_dependencies:
