--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^0.1.2
   flutter_launcher_icons: ^0.7.2
+  material_design_icons_flutter: ^4.0.5145
   firebase_core: ^0.4.3+2 #For firebase database
   firebase_database: ^3.1.3
   firebase_auth: ^0.16.0 #firebase Authentication
