--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   charts_flutter: ^0.9.0
   flutter_svg: ^0.17.4
   cloud_firestore: ^0.13.5
+  spreadsheet_decoder: ^1.1.0
 
 
 dev_dependencies:
