--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,12 @@ dependencies:
   image_picker: ^0.6.2+3
   http: ^0.12.0+2
   charts_flutter: ^0.9.0
-  flutter_svg: ^0.17.4
+  flutter_svg: ^0.18.0
   cloud_firestore: ^0.13.5
-  spreadsheet_decoder: ^1.1.0
+  spreadsheet_decoder: ^1.2.0
+  flutter_bloc: ^5.0.1
+  equatable: ^1.2.2
+  flutter_calendar_carousel: ^1.4.12
 
 
 dev_dependencies:
