--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   flutter_bloc: ^6.0.1
   equatable: ^1.2.2
   flutter_calendar_carousel: ^1.4.12
+  autocomplete_textfield: ^1.7.3
 
 
 dev_dependencies:
