--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   equatable: ^1.2.2
   flutter_calendar_carousel: ^1.4.12
   autocomplete_textfield: ^1.7.3
+  dropdown_search: ^0.4.4
 
 
 dev_dependencies:
