--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_calendar_carousel: ^1.4.12
   autocomplete_textfield: ^1.7.3
   dropdown_search: ^0.4.4
+  expandable: ^4.1.4
 
 
 dev_dependencies:
