--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   autocomplete_textfield: ^1.7.3
   dropdown_search: ^0.4.4
   expandable: ^4.1.4
+  pdf: ^1.9.0
 
 
 dev_dependencies:
