--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   dropdown_search: ^0.4.4
   expandable: ^4.1.4
   pdf: ^1.9.0
+  printing: ^3.5.0
+  path_provider: ^1.6.11
+  open_file: ^3.0.1
 
 
 dev_dependencies:
